feat: allow create event_procedure (#27)
