# app/models/event_procedure.rb
@@ -2,18 +2,13 @@
 
 class EventProcedure < ApplicationRecord
   has_enumeration_for :room_type, with: EventProcedures::RoomTypes, create_helpers: true
-  monetize :amount
-  ASSOCIATIONS = %i[procedure patient hospital health_insurance].freeze
 
   belongs_to :health_insurance
   belongs_to :hospital
   belongs_to :patient
   belongs_to :procedure
 
-  validates :amount_cents, presence: true
   validates :date, presence: true
   validates :patient_service_number, presence: true
   validates :room_type, presence: true
-
-  validates :amount_cents, numericality: { greater_than_or_equal_to: 0 }
 end
