# swagger/v1/swagger.yaml
@@ -5,8 +5,8 @@ info:
   version: v1
 
 servers:
-- url: https://med-system-backend.onrender.com
-- url: http://localhost:3000
+  - url: https://med-system-backend.onrender.com
+  - url: http://localhost:3000
 
 components:
   securitySchemes:
@@ -109,6 +109,44 @@ components:
         - urgency
         - payd_at
 
+    CreateEventProcedureRequest:
+      type: object
+      properties:
+        procedure_id:
+          type: integer
+        patient_id:
+          type: integer
+        hospital_id:
+          type: integer
+        health_insurance_id:
+          type: integer
+        patient_service_number:
+          type: string
+        date:
+          type: string
+          format: date
+        urgency:
+          type: boolean
+        room_type:
+          type: string
+      required:
+        - procedure_id
+        - patient_id
+        - hospital_id
+        - health_insurance_id
+        - patient_service_number
+        - date
+        - urgency
+        - room_type
+
+    UnprocessableEntityResponse:
+      type: object
+      properties:
+        errors:
+          type: array
+          items:
+            type: string
+
 paths:
   /users/tokens/sign_in:
     post:
@@ -116,17 +154,17 @@ paths:
       tags:
         - Sign in
       responses:
-        '200':
+        "200":
           description: JWT Token
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SignInPayload'
+                $ref: "#/components/schemas/SignInPayload"
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/SignInRequestBody'
+              $ref: "#/components/schemas/SignInRequestBody"
 
   /api/v1/users:
     get:
@@ -148,15 +186,15 @@ paths:
             type: integer
           description: Number of items per page (default is 25)
       responses:
-        '200':
+        "200":
           description: A list of users for the authenticated user (admin only)
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/User'
-        '401':
+                  $ref: "#/components/schemas/User"
+        "401":
           description: Unauthorized
 
   /api/v1/procedures:
@@ -179,15 +217,15 @@ paths:
             type: integer
           description: Number of items per page (default is 25)
       responses:
-        '200':
+        "200":
           description: A list of procedures for the authenticated user
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Procedure'
-        '401':
+                  $ref: "#/components/schemas/Procedure"
+        "401":
           description: Unauthorized
 
   /api/v1/event_procedures:
@@ -210,13 +248,41 @@ paths:
             type: integer
           description: Number of items per page (default is 25)
       responses:
-        '200':
+        "200":
           description: A list of event_procedures for the authenticated user
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/EventProcedure'
-        '401':
+                  $ref: "#/components/schemas/EventProcedure"
+        "401":
           description: Unauthorized
+    post:
+      summary: Create a new EventProcedure
+      operationId: createEventProcedure
+      tags:
+        - EventProcedures
+      security:
+        - BearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CreateEventProcedureRequest"
+      responses:
+        "201":
+          description: Event Procedure created successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/EventProcedure"
+        "401":
+          description: Unauthorized
+        "422":
+          description: Unprocessable Entity
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UnprocessableEntityResponse"
